--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.SanuAnu"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".AppBarFragments"
+            android:exported="false" />
         <activity
             android:name=".Other_layouts"
             android:exported="false" />
@@ -24,7 +27,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.SanuAnu.NoActionBar" >
+            android:theme="@style/Theme.SanuAnu.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
