--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.SanuAnu"
         tools:targetApi="31">
         <activity
+            android:name=".mediaAudio"
+            android:exported="true"/>
+        <activity
             android:name=".greed_intentData"
             android:exported="false" />
         <activity
